# ps2doom

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.ps2  NEWS  README  README.md  Whatsthis.txt  autogen.sh  configure.ac  configure.in  d_main.c  doomdef.h  i_main.c  i_video.c  info.c  info.h  m_menu.c  m_misc.c  p_switch.c  ps2.sh  ps2doom-TODO.txt  ps2doom.elf  ps2ips.irx  r_data.c  st_stuff.c
.github/workflows/: Compile.yml
mc/: icon.sys  ps2doom.icn
source/: Copy of i_main.c  Makefile  am_map.c  cosmitoFileIO.c  cosmitoFileIO.h  d_englsh.h  d_event.h  d_main.c  doomstat.c  doomstat.h  dstrings.c  dstrings.h  g_game.c  i_main.c  i_net.c  i_system.c  i_video.c  l_sound_sdl.c  m_menu.c  m_misc.c  mixer.c  p_pspr.c  p_spec.c  p_user.c  r_data.c  st_stuff.c  w_wad.c
source/ps2sdldoom_VS2005/: note.txt  ps2sdldoom_VS2005.vcproj
source/sdk source changes/debug/: scr_printf.c
src/: Makefile.am  config.h  d_main.c  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  g_game.c  hu_stuff.c  i_main.c  i_system.c  i_video.c  info.c  info.h  m_menu.c  m_misc.c  p_enemy.c  p_floor.c  p_inter.c  p_maputl.c  p_mobj.c  ps2doom.c  ps2doom.h  r_data.c  r_segs.c  r_things.c  s_sound.c  st_stuff.c  w_wad.c  wi_stuff.c
